--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
         "@esri/arcgis-rest-portal": "^2.0.3",
         "@esri/arcgis-rest-request": "^1.17.1",
         "@zippytech/react-toolkit": "^1.0.63",
+        "axios": "^0.19.0",
         "azure-storage": "^2.8.0",
         "calcite-react": "^0.33.2",
         "classnames": "^2.2.6",
         "detect-browser-language": "0.0.1",
         "dotenv": "^5.0.0",
         "esri-loader": "^2.6.0",
+        "fast-xml-parser": "^3.12.16",
+        "form-data": "^2.3.3",
         "formik": "^1.5.7",
         "moment": "^2.24.0",
+        "node-fetch": "^2.6.0",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "react-redux": "^6.0.1",
         "react-router": "^4.3.1",
         "react-router-dom": "5.0.0",
+        "react-sweet-progress": "^1.1.2",
         "react-table": "^6.10.0",
         "react-transition-group": "^2.5.3",
         "redux": "^4.0.1",
@@ -33,7 +38,7 @@
         "yargs": "^11.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "PORT=3001 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
