--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@zippytech/react-toolkit": "^1.0.63",
         "axios": "^0.19.0",
         "azure-storage": "^2.8.0",
-        "calcite-react": "^0.33.2",
+        "calcite-react": "^0.39.0",
         "classnames": "^2.2.6",
         "detect-browser-language": "0.0.1",
         "dotenv": "^5.0.0",
@@ -22,6 +22,7 @@
         "formik": "^1.5.7",
         "moment": "^2.24.0",
         "node-fetch": "^2.6.0",
+        "papaparse": "^5.0.1",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
         "react-redux": "^6.0.1",
